--- a/index.html
+++ b/index.html
@@ -93,10 +93,13 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href="lesson1/index.html">Урок 8</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson20/index.html">Урок 2</a>
+                        <a href="lesson13/index.html">Урок 13(Глобальная структура)</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson20/index.html">Урок 20</a>
                     </li>
                 </ul>
             </div>
