--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                         <a href="lesson20/index.html">Урок 20</a>
                     </li>
                     <li class="content__list-item">
+                        <a href="lesson28/index.html">Урок 28</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="lesson36/index.html">Урок 36</a>
                     </li>
                 </ul>
