--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <a href="lesson36/index.html">Урок 36</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson43/index.html">Урок 43</a>
+                        <a href="Lesson43/index.html">Урок 43</a>
                     </li>
                 </ul>
             </div>
