--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
                     <li class="content__list-item">
                         <a href="Lesson43/index.html">Урок 43</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson51/index.html">Урок 51</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson54/index.html">Урок 54</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson55/index.html">Урок 55</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
