--- a/lesson126/index.html
+++ b/lesson126/index.html
@@ -714,7 +714,7 @@
                 <div class="container">
                     <div class="gallery__inner">
                         <div class="gallery__img">
-                            <img src="/img/cupcakes.png" alt="">
+                            <img src="../img/cupcakes.png" alt="#">
                         </div>
                         <div class="gallery__content">
                             <div class="gallery__info">
