--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
-                    <a href="ПАПКА-С-НОМЕРОМ-УРОКА">Дипломный проект</a>
+                    <a href="diplomka/index.html">Дипломный проект</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
