--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="header__inner">
                     <a href="#" class="header__logo">
-                        <img src="/img/logo.svg" alt="logo">
+                        <img src="img/logo.svg" alt="logo">
                     </a>
                     <nav class="header__nav-shop">
                         <ul class="header__nav-shop-list">
@@ -38,7 +38,7 @@
                     </nav>
                     <div class="header__search">
                         <button class="search__button">
-                            <img src="/img/icons/search.svg" alt="#">
+                            <img src="img/icons/search.svg" alt="#">
                         </button>
                         <input class="search__text" type="text" placeholder="Search">
                     </div>
@@ -46,17 +46,17 @@
                         <ul class="header__nav-user-list">
                             <li class="header__nav-user-item">
                                 <a href="#" class="header__nav-user-link">
-                                    <img src="/img/icons/like.svg" alt="">
+                                    <img src="img/icons/like.svg" alt="">
                                 </a>
                             </li>
                             <li class="header__nav-user-item">
                                 <a href="#" class="header__nav-user-link">
-                                    <img src="/img/icons/person.svg" alt="">
+                                    <img src="img/icons/person.svg" alt="">
                                 </a>
                             </li>
                             <li class="header__nav-user-item">
                                 <a href="#" class="header__nav-user-link">
-                                    <img src="/img/icons/cart.svg" alt="">
+                                    <img src="img/icons/cart.svg" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -71,10 +71,10 @@
                     <div class="slider-preview swiper">
                         <div class="slider-preview__wrapper swiper-wrapper">
                             <div class="slider-preview__slide swiper-slide">
-                                <img src="/img/main_page/swiper_girl.png" alt="#">
+                                <img src="img/main_page/swiper_girl.png" alt="#">
                             </div>
                             <div class="slider-preview__slide swiper-slide">
-                                <img src="/img/main_page/swiper_girl2.png" alt="#">
+                                <img src="img/main_page/swiper_girl2.png" alt="#">
                             </div>
                         </div>
                         <div class="slider-preview__pagination swiper-pagination"></div>
@@ -164,24 +164,24 @@
                     </div>
                     <div class="footer__grid">
                         <div class="socials__footer">
-                            <a href="#" class="social__footer-link"><img src="/img/icons/socials/face.svg"
+                            <a href="#" class="social__footer-link"><img src="img/icons/socials/face.svg"
                                     alt="facebook"></a>
-                            <a href="#" class="social__footer-link"><img src="/img/icons/socials/inst.svg"
+                            <a href="#" class="social__footer-link"><img src="img/icons/socials/inst.svg"
                                     alt="instagram"></a>
-                            <a href="#" class="social__footer-link"><img src="/img/icons/socials/twitter.svg"
+                            <a href="#" class="social__footer-link"><img src="img/icons/socials/twitter.svg"
                                     alt="twitter"></a>
-                            <a href="#" class="social__footer-link"><img src="/img/icons/socials/in.svg"
+                            <a href="#" class="social__footer-link"><img src="img/icons/socials/in.svg"
                                     alt="facebook"></a>
                         </div>
                         <h4 class="footer__title footer__download-title">Download The App</h4>
                         <div class="footer__download">
                             <a href="#" class="footer__download-play">
-                                <img class="footer__download-img" src="/img/icons/play.svg" alt="play market">
+                                <img class="footer__download-img" src="img/icons/play.svg" alt="play market">
                                 <span class="footer__download-text">android app on</span>
                                 Google Play
                             </a>
                             <a href="#" class="footer__download-app">
-                                <img class="footer__download-img" src="/img/icons/mobile.svg" alt="app store">
+                                <img class="footer__download-img" src="img/icons/mobile.svg" alt="app store">
                                 <span class="footer__download-text">Available on the</span>
                                 App Store
                             </a>
