--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="body">
+<body class="body body--opened-menu">
     <div class="wrapper">
         <header class="header">
             <div class="container">
@@ -17,67 +17,72 @@
                     <a href="#" class="header__logo">
                         <img src="img/logo.svg" alt="logo">
                     </a>
-                    <nav class="header__nav-shop">
-                        <ul class="header__nav-shop-list">
-                            <li class="header__nav-shop-item">
-                                <a href="#" class="header__nav-shop-link header__nav-shop-link--selected">Shop</a>
-                            </li>
-                            <li class="header__nav-shop-item">
-                                <a href="#" class="header__nav-shop-link">Men</a>
-                            </li>
-                            <li class="header__nav-shop-item">
-                                <a href="#" class="header__nav-shop-link">Women</a>
-                            </li>
-                            <li class="header__nav-shop-item">
-                                <a href="#" class="header__nav-shop-link">Combos</a>
-                            </li>
-                            <li class="header__nav-shop-item">
-                                <a href="#" class="header__nav-shop-link">Joggers</a>
-                            </li>
-                        </ul>
+                    <nav class="header__nav">
+                        <nav class="header__nav-shop">
+                            <ul class="header__nav-shop-list">
+                                <li class="header__nav-shop-item">
+                                    <a href="#" class="header__nav-shop-link header__nav-shop-link--selected">Shop</a>
+                                </li>
+                                <li class="header__nav-shop-item">
+                                    <a href="#" class="header__nav-shop-link">Men</a>
+                                </li>
+                                <li class="header__nav-shop-item">
+                                    <a href="#" class="header__nav-shop-link">Women</a>
+                                </li>
+                                <li class="header__nav-shop-item">
+                                    <a href="#" class="header__nav-shop-link">Combos</a>
+                                </li>
+                                <li class="header__nav-shop-item">
+                                    <a href="#" class="header__nav-shop-link">Joggers</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="header__search">
+                            <button class="search__button">
+                                <img src="img/icons/search.svg" alt="#">
+                            </button>
+                            <input class="search__text" type="text" placeholder="Search">
+                        </div>
+                        <nav class="header__nav-user">
+                            <ul class="header__nav-user-list">
+                                <li class="header__nav-user-item">
+                                    <a href="#" class="header__nav-user-link">
+                                        <svg width="16.500977" height="14.835114" viewBox="0 0 16.501 14.8351" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <path
+                                                d="M2.36 1.73C0.48 3.33 0.22 6 1.69 7.89C2.92 9.47 6.63 12.79 7.85 13.86C7.99 13.98 8.05 14.04 8.13 14.06C8.2 14.08 8.28 14.08 8.35 14.06C8.43 14.04 8.5 13.98 8.63 13.86C9.85 12.79 13.56 9.47 14.79 7.89C16.26 6 16.03 3.31 14.12 1.73C12.21 0.14 9.74 0.59 8.24 2.34C6.74 0.59 4.24 0.12 2.36 1.73Z"
+                                                stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="header__nav-user-item">
+                                    <a href="#" class="header__nav-user-link">
+                                        <svg width="14.833252" height="14.833344" viewBox="0 0 14.8333 14.8333" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <path
+                                                d="M7.41 9.08C5.11 9.08 3.25 7.21 3.25 4.91C3.25 2.61 5.11 0.75 7.41 0.75C9.71 0.75 11.58 2.61 11.58 4.91C11.58 7.21 9.71 9.08 7.41 9.08ZM0.75 14.08C0.75 11.32 3.73 9.08 7.41 9.08M14.08 14.08C14.08 11.32 11.09 9.08 7.41 9.08"
+                                                stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
+                                                stroke-linecap="round" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="header__nav-user-item">
+                                    <a href="#" class="header__nav-user-link">
+                                        <svg width="16.023193" height="14.833344" viewBox="0 0 16.0232 14.8333" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <path
+                                                d="M0.75 0.75L1.25 0.75C2.1 0.75 2.81 1.39 2.91 2.23L3.58 8.43C3.68 9.27 4.39 9.91 5.24 9.91L12.45 9.91C13.21 9.91 13.88 9.4 14.07 8.66L15.22 4.15C15.48 3.09 14.69 2.07 13.6 2.07L3.75 2.07M4.08 14.08C3.62 14.08 3.25 13.71 3.25 13.25C3.25 12.78 3.62 12.41 4.08 12.41C4.54 12.41 4.91 12.78 4.91 13.25C4.91 13.71 4.54 14.08 4.08 14.08ZM3.77 12.93L4.39 12.93M3.77 13.56L4.39 13.56M13.25 14.08C12.78 14.08 12.41 13.71 12.41 13.25C12.41 12.78 12.78 12.41 13.25 12.41C13.71 12.41 14.08 12.78 14.08 13.25C14.08 13.71 13.71 14.08 13.25 14.08ZM12.93 12.93L13.56 12.93M12.93 13.56L13.56 13.56"
+                                                stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000" />
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </nav>
-                    <div class="header__search">
-                        <button class="search__button">
-                            <img src="img/icons/search.svg" alt="#">
-                        </button>
-                        <input class="search__text" type="text" placeholder="Search">
-                    </div>
-                    <nav class="header__nav-user">
-                        <ul class="header__nav-user-list">
-                            <li class="header__nav-user-item">
-                                <a href="#" class="header__nav-user-link">
-                                    <svg width="16.500977" height="14.835114" viewBox="0 0 16.501 14.8351" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path
-                                            d="M2.36 1.73C0.48 3.33 0.22 6 1.69 7.89C2.92 9.47 6.63 12.79 7.85 13.86C7.99 13.98 8.05 14.04 8.13 14.06C8.2 14.08 8.28 14.08 8.35 14.06C8.43 14.04 8.5 13.98 8.63 13.86C9.85 12.79 13.56 9.47 14.79 7.89C16.26 6 16.03 3.31 14.12 1.73C12.21 0.14 9.74 0.59 8.24 2.34C6.74 0.59 4.24 0.12 2.36 1.73Z"
-                                            stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
-                                            stroke-linejoin="round" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="header__nav-user-item">
-                                <a href="#" class="header__nav-user-link">
-                                    <svg width="14.833252" height="14.833344" viewBox="0 0 14.8333 14.8333" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path
-                                            d="M7.41 9.08C5.11 9.08 3.25 7.21 3.25 4.91C3.25 2.61 5.11 0.75 7.41 0.75C9.71 0.75 11.58 2.61 11.58 4.91C11.58 7.21 9.71 9.08 7.41 9.08ZM0.75 14.08C0.75 11.32 3.73 9.08 7.41 9.08M14.08 14.08C14.08 11.32 11.09 9.08 7.41 9.08"
-                                            stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000"
-                                            stroke-linecap="round" />
-                                    </svg>
-                                </a>
-                            </li>
-                            <li class="header__nav-user-item">
-                                <a href="#" class="header__nav-user-link">
-                                    <svg width="16.023193" height="14.833344" viewBox="0 0 16.0232 14.8333" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path
-                                            d="M0.75 0.75L1.25 0.75C2.1 0.75 2.81 1.39 2.91 2.23L3.58 8.43C3.68 9.27 4.39 9.91 5.24 9.91L12.45 9.91C13.21 9.91 13.88 9.4 14.07 8.66L15.22 4.15C15.48 3.09 14.69 2.07 13.6 2.07L3.75 2.07M4.08 14.08C3.62 14.08 3.25 13.71 3.25 13.25C3.25 12.78 3.62 12.41 4.08 12.41C4.54 12.41 4.91 12.78 4.91 13.25C4.91 13.71 4.54 14.08 4.08 14.08ZM3.77 12.93L4.39 12.93M3.77 13.56L4.39 13.56M13.25 14.08C12.78 14.08 12.41 13.71 12.41 13.25C12.41 12.78 12.78 12.41 13.25 12.41C13.71 12.41 14.08 12.78 14.08 13.25C14.08 13.71 13.71 14.08 13.25 14.08ZM12.93 12.93L13.56 12.93M12.93 13.56L13.56 13.56"
-                                            stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.500000" />
-                                    </svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <a class="burger-icon" href="#">
+                        <span></span>
+                    </a>
                 </div>
             </div>
         </header>
@@ -92,7 +97,9 @@
                                 <h2 class="slider__preview-inner-title">Summer
                                     Value Pack</h2>
                                 <h3 class="slider__preview-inner-text">cool / colorful / comfy</h3>
-                                    <a href="#" class="slider__preview-inner-link">Shop Now</a>
+                                <div class="slider__preview-inner-link">
+                                    <a href="#" class="button-text">Shop Now</a>
+                                </div>
                             </div>
                             <img src="img/main_page/swiper_girl.png" alt="#">
                         </div>
@@ -338,7 +345,9 @@
                                     <div class="fashion__title">WE MADE YOUR EVERYDAY FASHION BETTER!</div>
                                     <div class="fashion__paragraph">In our journey to improve everyday fashion, euphoria
                                         presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7</div>
-                                    <a href="#" class="fashion__button">Shop Now</a>
+                                    <div class="fashion__button">
+                                        <a href="" class="button-text">Shop Now</a>
+                                    </div>
                                 </div>
                             </div>
                             <img src="img/main_page/fashion2.png" alt="#" class="fashion__img">
