--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -165,61 +165,65 @@
                         </svg>
                         <p>New Arrival</p>
                     </div>
-                    <div class="collection-slider">
-                        <div class="collection__wrapper swiper-wrapper">
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival1.jpeg" alt="">
-                                    <div class="collection__slide-text">Knitted Joggers</div>
-                                </a>
-                            </div>
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival2.jpeg" alt="">
-                                    <div class="collection__slide-text">Full Sleeve</div>
-                                </a>
-                            </div>
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival3.jpeg" alt="">
-                                    <div class="collection__slide-text">Active T-Shirts</div>
-                                </a>
-                            </div>
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival4.jpeg" alt="">
-                                    <div class="collection__slide-text">Urban Shirts</div>
-                                </a>
-                            </div>
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival1.jpeg" alt="">
-                                    <div class="collection__slide-text">Knitted Joggers</div>
-                                </a>
-                            </div>
-                            <div class="collection__slide swiper-slide">
-                                <a href="collection__link">
-                                    <img src="img/main_page/new_arrival2.jpeg" alt="">
-                                    <div class="collection__slide-text">Full Sleeve</div>
-                                </a>
+                    <div class="collection__slider-container">
+                        <div class="collection-slider">
+                            <div class="collection__wrapper swiper-wrapper">
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival1.jpeg" alt="">
+                                        <div class="collection__slide-text">Knitted Joggers</div>
+                                    </a>
+                                </div>
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival2.jpeg" alt="">
+                                        <div class="collection__slide-text">Full Sleeve</div>
+                                    </a>
+                                </div>
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival3.jpeg" alt="">
+                                        <div class="collection__slide-text">Active T-Shirts</div>
+                                    </a>
+                                </div>
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival4.jpeg" alt="">
+                                        <div class="collection__slide-text">Urban Shirts</div>
+                                    </a>
+                                </div>
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival1.jpeg" alt="">
+                                        <div class="collection__slide-text">Knitted Joggers</div>
+                                    </a>
+                                </div>
+                                <div class="collection__slide swiper-slide">
+                                    <a href="collection__link">
+                                        <img src="img/main_page/new_arrival2.jpeg" alt="">
+                                        <div class="collection__slide-text">Full Sleeve</div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <button type="button" class="collection__prev">
-                            <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
-                                    stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
-                                    stroke-linecap="round" />
-                            </svg>
-                        </button>
-                        <button type="button" class="collection__next">
-                            <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
-                                    stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
-                                    stroke-linecap="round" />
-                            </svg>
-                        </button>
+                        <div class="collection__nav">
+                            <button type="button" class="collection__prev">
+                                <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
+                                        stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
+                                        stroke-linecap="round" />
+                                </svg>
+                            </button>
+                            <button type="button" class="collection__next">
+                                <svg width="15.185791" height="13.606445" viewBox="0 0 15.1858 13.6064" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <path d="M0.8 6.8L13.8 6.8M8.8 0.8L14.09 6.09C14.48 6.48 14.48 7.11 14.09 7.51L8.8 12.8"
+                                        stroke="#3C4242" stroke-opacity="1.000000" stroke-width="1.600000"
+                                        stroke-linecap="round" />
+                                </svg>
+                            </button>
+                        </div>
                     </div>
                     <div class="collection">
                         <svg width="6.000000" height="30.000000" viewBox="0 0 6 30" fill="none"
