--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -14,26 +14,26 @@
         <header class="header">
             <div class="container">
                 <div class="header__inner">
-                    <a href="#" class="header__logo">
+                    <a href="index.html" class="header__logo">
                         <img src="img/logo.svg" alt="logo">
                     </a>
                     <nav class="header__nav">
                         <nav class="header__nav-shop">
                             <ul class="header__nav-shop-list">
                                 <li class="header__nav-shop-item">
-                                    <a href="#" class="header__nav-shop-link header__nav-shop-link--selected">Shop</a>
+                                    <a href="index.html" class="header__nav-shop-link header__nav-shop-link--selected">Shop</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="#" class="header__nav-shop-link">Men</a>
+                                    <a href="women.html" class="header__nav-shop-link">Men</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="#" class="header__nav-shop-link">Women</a>
+                                    <a href="women.html" class="header__nav-shop-link">Women</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="#" class="header__nav-shop-link">Combos</a>
+                                    <a href="women.html" class="header__nav-shop-link">Combos</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="#" class="header__nav-shop-link">Joggers</a>
+                                    <a href="women.html" class="header__nav-shop-link">Joggers</a>
                                 </li>
                             </ul>
                         </nav>
