--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -83,7 +83,7 @@
                             </ul>
                         </nav>
                     </nav>
-                    <a class="burger-icon" href="women.html">
+                    <a class="burger-icon" href="#">
                         <span></span>
                     </a>
                 </div>
