--- a/Diplomka/women.html
+++ b/Diplomka/women.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="body">
+<body class="body ">
     <div class="wrapper">
         <header class="header">
             <div class="container">
@@ -96,7 +96,7 @@
                     <aside>
                         <div class="filter">
                             <div class="filter__inner">
-                                <button class="filter__title">Filter <svg class="filter__icon" width="16.466675"
+                                <button id="filterMain" class="filter__title">Filter <svg class="filter__icon" width="16.466675"
                                         height="18.299988" viewBox="0 0 16.4667 18.3" fill="none"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <path id="filter"
@@ -436,6 +436,17 @@
                                     <div class="cart-page__links">
                                         <a href="#" class="cart-page__name cart-page__name--active">New</a>
                                         <a href="#" class="cart-page__name">Recommended</a>
+                                        <a href="#" class="filter__mobile"> Filter
+                                            <svg class="filter__icon" width="16.466675" height="18.299988"
+                                                viewBox="0 0 16.4667 18.3" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <path id="filter"
+                                                    d="M2.73 5.48L2.73 0.89M2.73 17.4L2.73 9.14M13.73 17.4L13.73 9.14M8.23 17.4L8.23 12.81M8.23 9.14L8.23 0.89M13.73 5.48L13.73 0.89M0.9 5.48L4.56 5.48M6.4 12.81L10.06 12.81M11.9 5.48L15.56 5.48"
+                                                    stroke="#807D7E" stroke-opacity="1.000000" stroke-width="1.800000"
+                                                    stroke-linecap="round" />
+                                            </svg>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="cart-page__products">
@@ -512,7 +523,7 @@
                                                     Levender Hoodie with ....
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    Nike’s  Brand
+                                                    Nike’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -539,7 +550,7 @@
                                                     Leaves Pattern White...
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    paypal’s  Brand
+                                                    paypal’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -566,7 +577,7 @@
                                                     White Graphic Crop Top
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    woden’s  Brand
+                                                    woden’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -593,7 +604,7 @@
                                                     Black Shorts
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    MM’s  Brand
+                                                    MM’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -620,7 +631,7 @@
                                                     Barboreal Gray Sweats...
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    Priya’s  Brand
+                                                    Priya’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -647,7 +658,7 @@
                                                     Yellow Sweatshirt
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    woden’s  Brand
+                                                    woden’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -674,7 +685,7 @@
                                                     Flower Pattern Black C...
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    MM’s  Brand
+                                                    MM’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -698,10 +709,10 @@
                                         <a href="#" class="limelight__link">
                                             <div class="limelight__text">
                                                 <div class="limelight__title">
-                                                    I Don’t Graphic T-shirt 
+                                                    I Don’t Graphic T-shirt
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    Nisargi’s  Brand
+                                                    Nisargi’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -728,7 +739,7 @@
                                                     Blue Flower Print Crop ....
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    Mellon’s  Brand
+                                                    Mellon’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
@@ -755,7 +766,7 @@
                                                     line Pattern Black H...
                                                 </div>
                                                 <div class="limelight__subtitle">
-                                                    AS’s  Brand
+                                                    AS’s Brand
                                                 </div>
                                             </div>
                                             <div class="limelight__price">
