--- a/Diplomka/index.html
+++ b/Diplomka/index.html
@@ -21,19 +21,19 @@
                         <nav class="header__nav-shop">
                             <ul class="header__nav-shop-list">
                                 <li class="header__nav-shop-item">
-                                    <a href="index.html" class="header__nav-shop-link header__nav-shop-link--selected">Shop</a>
+                                    <a href="index.html" class="header__nav-shop-link">Shop</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="women.html" class="header__nav-shop-link">Men</a>
+                                    <a href="men.html" class="header__nav-shop-link">Men</a>
                                 </li>
                                 <li class="header__nav-shop-item">
                                     <a href="women.html" class="header__nav-shop-link">Women</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="women.html" class="header__nav-shop-link">Combos</a>
+                                    <a href="combos.html" class="header__nav-shop-link">Combos</a>
                                 </li>
                                 <li class="header__nav-shop-item">
-                                    <a href="women.html" class="header__nav-shop-link">Joggers</a>
+                                    <a href="joggers.html" class="header__nav-shop-link">Joggers</a>
                                 </li>
                             </ul>
                         </nav>
